# awesome-computer-graphics

./: .gitignore  Graphics.sln  ReadMe.md
CourseTasks/Problem1/: Problem1.vcxproj  Problem1.vcxproj.filters
CourseTasks/Problem2/: Problem2.vcxproj  Problem2.vcxproj.filters
CourseTasks/Problem3/: Problem3.cpp  Problem3.vcxproj.filters
CourseTasks/Problem4/: Problem4.cpp
LightingScene/: CMakeLists.txt  scene.cpp
ModelMoving/: CMakeLists.txt  obj-viewer.cpp
PointsToKml/: main.py  points.kml  points.xls  points_gcj02.kml  points_wgs84.kml
Problem1/: Problem1.cpp
Problem1/Debug/: vc142.idb
Problem1/Debug/Problem1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Problem1.lastbuildstate  Problem1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Problem1/x64/Debug/: vc142.idb
Problem1/x64/Debug/Problem1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Problem1.lastbuildstate  Problem1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Problem1/x64/Release/Problem1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Problem1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
Problem2/: Problem2.cpp
Problem2/x64/Debug/: vc142.idb
Problem3/: Problem3.vcxproj
Problem3/x64/Debug/: vc142.idb
Problem4/: Problem4.vcxproj  Problem4.vcxproj.filters
Problem4/x64/Debug/: vc142.idb
Scene/: Code1(2).txt  scene.cpp
x64/Debug/: Graphics.ilk  Problem1.ilk  Problem2.ilk
x64/Release/: Problem1.iobj  Problem1.ipdb  Problem2.iobj  Problem2.ipdb  Problem4.iobj  Problem4.ipdb
(+24 files in other folders)
